ingress/k8s_odoo-ingress.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: odoo
  labels:
    name: odoo
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-db
  namespace: odoo
spec:
  ports:
  - port: 5432

  selector:
    appdb: odoo-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: odoo-db
  namespace: odoo
spec: 
  replicas: 1
  template:
    metadata:
      labels:
        appdb: odoo-db
    spec: 
      containers:
      - name: odoo-db
        image: postgres:9.6-alpine
        ports:
        - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: odoo-shop
  namespace: odoo
spec:
  type: NodePort
  ports:
  - port: 8069
    targetPort: web-port

  selector:
    app: odoo-shop
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: odoo-shop
  namespace: odoo
spec: 
  replicas: 1
  template:
    metadata:
      labels:
        app: odoo-shop
    spec:
      containers:
      - name: odoo-shop
        image: odoo:latest
        securityContext:
          privileged: true
          runAsUser: 0
        ports:
          - containerPort: 8069
            name: web-port
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qn-ingress
  namespace: odoo
spec:
  rules:
  - host: 10.qn.com
    http:
      paths:
      - backend: 
          serviceName: odoo-shop
          servicePort: 80
  - host: 11.qn.com
    http:
      paths:
      - backend:
          serviceName: odoo-shop
          servicePort: 80
---
